ObsidianDiscordAll.theme.css
/* ... */
/*
  *
  *  PINGS & NOTIFICATIONS
  *
  */

.numberBadge__2b1f5,
.wrapper_a2f8f7.badge_e3c1c6 {
    background-color: var(--ping-color) !important;
    box-shadow: 0px 0px 10px 2px var(--bar-box-shadow-color) !important;
}

.bar__3b95d,
.live_a7acae {
    background-color: var(--bar-color) !important;
    box-shadow: 0px 0px 10px 2px var(--bar-box-shadow-color) !important;
}

/*
  *
  *	SPOILERS
  *
  */

span.spoilerContent_a3d0f7.spoilerMarkdownContent_a3d0f7.hidden_a3d0f7 {
    background-color: var(--sidebar-panel-color) !important;
}

/*
  *
  *	SERVER FOLDERS
  *
  */

.expandedFolderBackground__48112 {
    border-radius: 25px !important;
}

/*
  *
  *	LOGIN SCREEN
  *
  */

.authBox_b83a05 {
    padding: 24px 24px 0 !important;
    background-color: var(--popout-color) !important;
    border-radius: var(--popout-radius-big) !important;
    box-shadow: var(--shadow-3dp) !important;
}

.authBox_b83a05:last-child {
    padding-bottom: 24px !important;
}

.authBox_b83a05 .mainLoginContainer_d58f04 {
    margin-right: 24px !important;
    padding-right: 24px !important;
    border-right: 1px solid var(--card-border-color) !important;
}

.authBox_b83a05 .heading-xl\/semibold_dc00ef {
    margin-bottom: 16px !important;
    font-weight: 400 !important;
}

.authBox_b83a05 .verticalSeparator_c6cd4b {
    display: none !important;
}

.authBox_b83a05 .qrLogin_c6cd4b {
    height: 320px !important;
}

.authBox_b83a05 .needAccount_d58f04 {
    line-height: 24px !important;
}

.authBox_b83a05 .lookLink_dd4f85 .sizeMin_dd4f85 {
    line-height: var(--button-height) !important;
}

.authBox_b83a05:not(.chooseAccountAuthBox-Udr8ty) .lookLink_dd4f85 {
    --button-height: 17px !important;
    --button-padding: 0 !important;
    --button-radius: 0 !important;
    font-size: 14px !important;
    font-weight: 400 !important;
}

.authBox_b83a05:not(.chooseAccountAuthBox-Udr8ty) .lookLink_dd4f85:after {
    display: none !important;
}

.authBox_b83a05:not(.chooseAccountAuthBox-Udr8ty) .lookLink_dd4f85:hover {
    text-decoration: underline !important;
}

.authBox_b83a05 .needAccount_d58f04+.lookLink_dd4f85 {
    position: relative !important;
    top: -3px !important;
}

.navRow-dG-XX8 {
    height: auto !important;
    padding: 24px !important;
    background-color: transparent !important;
}

.navRow-dG-XX8 .button-ejjZWC {
    margin: 0 !important;
}

.navRow-dG-XX8 .button_dd4f85 {
    margin: 0 !important;
}

/*
  *
  *	MESSAGE ACTIONS
  *
  */

.buttons_d5deea.container_a3b500,
.buttons__5126c.container__040f0 {
    transition: none !important;
}

.buttonsInner_d5deea.popover_e986d9.wrapper_f7e168,
.buttonsInner__5126c.popover_f84418.wrapper_f7ecac {
    border-radius: 25px !important;
    background-color: var(--message-color-hover) !important;
    box-shadow: var(--shadow-2dp) !important;
}

.button_f7e168,
.button_f7ecac,
div.hoverBarButton_f84418.button_f7ecac {
    border-radius: 50% !important;
    transition: none !important;
    animation: none !important;
    display: flex !important;
    align-items: center !important;
    justify-content: center !important;
    width: 32px !important;
    height: 32px !important;
    padding: 0 !important;
    line-height: 0 !important;
    overflow: hidden !important;
    background-color: var(--message-color-hover) !important;
    color: hsl(240, 4%, 72%) !important;
}

.button_f7e168:hover,
.button_f7ecac:hover,
div.hoverBarButton_f84418.button_f7ecac:hover {
    background-color: var(--message-color) !important;
    color: rgb(246, 243, 237) !important;
}

.button_f7ecac svg,
div.hoverBarButton_f84418.button_f7ecac svg,
.button_f7ecac svg.icon_f84418,
div.hoverBarButton_f84418.button_f7ecac svg.icon_f84418 {
    display: block !important;
    width: 18px !important;
    height: 18px !important;
    margin: auto !important;
    transform: none !important;
    position: static !important;
    inset: auto !important;
    flex: 0 0 auto !important;
    color: inherit !important;
    opacity: 1 !important;
    visibility: visible !important;
    overflow: visible !important;
}

.button_f7ecac svg [fill="currentColor"],
div.hoverBarButton_f84418.button_f7ecac svg [fill="currentColor"] {
    fill: currentColor !important;
}

.button_f7ecac svg [stroke="currentColor"],
div.hoverBarButton_f84418.button_f7ecac svg [stroke="currentColor"] {
    stroke: currentColor !important;
}

/*
  *
  *	SCROLL DOWN BUTTON
  *
  */

.jumpToPresentBar__0f481::before {
    content: "" !important;
    position: absolute !important;
    left: 50% !important;
    top: 50% !important;
    transform: translate(-50%, -50%) !important;
    width: 30px !important;
    height: 30px !important;
    background-color: var(--menu-item-text-color) !important;
    -webkit-mask-image: url("data:image/svg+xml,%3Csvg data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath d='M3.81 4.38 8 8.57l4.19-4.19 1.52 1.53L8 11.62 2.29 5.91l1.52-1.53z'/%3E%3C/svg%3E") !important;
    mask-image: url("data:image/svg+xml,%3Csvg data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath d='M3.81 4.38 8 8.57l4.19-4.19 1.52 1.53L8 11.62 2.29 5.91l1.52-1.53z'/%3E%3C/svg%3E") !important;
    -webkit-mask-repeat: no-repeat !important;
    mask-repeat: no-repeat !important;
    -webkit-mask-position: center !important;
    mask-position: center !important;
    -webkit-mask-size: contain !important;
    mask-size: contain !important;
}

/*
  *
  *	MEMBERS LIST
  *
  */

.members_cbd271 {
    background-color: var(--main-color) !important;
}

.members_cbd271,
.members_cbd271>div {
    background-color: var(--main-color) !important;
}

.members_cbd271 .container_d808b0 {
    width: 100% !important;
    height: 42px !important;
    margin-left: 0 !important;
    margin-bottom: 2px !important;
}

.folderGroupBackground__48112 {
    border-radius: var(--channel-radius) !important;
}
/* ... */

